<resources>

    <!-- string ids for register.xml -->
    <string name="app_name">Nap with Friends</string>
    <string name= "action_settings">Nap with Friends</string>
    <string name="username_textview">Username</string>
    <string name="password_textview">Password</string>
    <string name="full_name">Full Name</string>
    <string name="year">Year</string>
    <string name="house">House</string>
    <string name="room">Room</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    
   
    <!-- string ids for read_comments.xml, add_comment.xml, add_request.xml, single_comment.xml -->
    <string name="post_request">Request</string>
    <string name="post_comment">Host</string>    
    <string name="read_comments_title">Host and Request</string>
    <string name="passwords_not_same">Passwords don\'t match</string>
    <string name="post_request_title">Request a place to nap</string>
    <string name="post_host_title">Host a friend</string>
    <string name="post_house_accom">House/Accommodation: </string>
    <string name="post_contact_info">Contact Info: </string>
    <string name="post_pref_gender">Preferred Gender: </string>
    <string name="post_pref_location">Preferred Location: </string>
    <string name="post_name">Name: </string>    
    <string name="login">Login</string>    
    <string name="pass">     Password</string>  
    <string name="use">            Username</string>    
    
    
    
    
</resources>